--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,19 @@
-<h1 class="text-3xl font-bold underline">
-  Hello world!
-</h1>
+
+<mat-toolbar>
+  <span>MKBugs</span>
+</mat-toolbar>
+
+<mat-sidenav-container class="mainContainer">
+  <mat-sidenav class="sideBar" mode="side" opened>
+    <nav>
+      <a class="items-center" mat-button style="display: flex;" *ngFor="let link of links" 
+      [routerLink]="link.url" routerLinkActive="text-red-600"> 
+      <mat-icon>{{link.icon}}</mat-icon>
+        {{link.name}}
+      </a>
+    </nav>
+  </mat-sidenav>
+  <mat-sidenav-content>
+    <router-outlet></router-outlet>
+  </mat-sidenav-content>
+</mat-sidenav-container>
