--- a/src/app/components/project-managment/project-detail/project-detail.component.html
+++ b/src/app/components/project-managment/project-detail/project-detail.component.html
@@ -1,12 +1,15 @@
-<div class="flex flex-col gap-8">
+<div class="flex flex-col gap-8 sticky top-8">
 
     <div class="">
         <mat-card class="example-card">
             <mat-card-title></mat-card-title>
             <mat-card-subtitle></mat-card-subtitle>
             <mat-card-content>
-              <p></p>
               <p>{{project.title}}</p>
+              <p>{{project.subtitle}}</p>
+                <div *ngFor="let ticket of project.tickets" class="w-[100%] border rounded-md px-4 py-2 mt-2 flex items-center gap-2" >
+                    {{ticket.name}} <mat-icon>  {{ ticket.completed ?  'check': 'close'}} </mat-icon>
+                </div>
             </mat-card-content>
             <mat-card-actions>
               <button mat-button>=</button>
@@ -19,9 +22,8 @@
         <mat-card class="example-card">
             <mat-card-title></mat-card-title>
             <mat-card-subtitle></mat-card-subtitle>
-            <mat-card-content>
-              <p></p>
-              <p>{{project.subtitle}}</p>
+            <mat-card-content *ngFor="let user of project.users">
+              <p>{{user.name}}</p>
             </mat-card-content>
             <mat-card-actions>
               <button mat-button>=</button>
