--- a/src/app/components/project-managment/project-detail/project-detail.component.html
+++ b/src/app/components/project-managment/project-detail/project-detail.component.html
@@ -5,15 +5,14 @@
             <mat-card-title></mat-card-title>
             <mat-card-subtitle></mat-card-subtitle>
             <mat-card-content>
-              <p>{{project.title}}</p>
-              <p>{{project.subtitle}}</p>
-                <div *ngFor="let ticket of project.tickets" class="w-[100%] border rounded-md px-4 py-2 mt-2 flex items-center gap-2" >
-                    {{ticket.name}} <mat-icon>  {{ ticket.completed ?  'check': 'close'}} </mat-icon>
-                </div>
+              <h2>{{currentProject?.title}}</h2>
+              <p>{{currentProject?.subtitle}}</p>
+               <div class="border rounded-md p-4">
+                Latest Project activity, tickets created, closed, comments...
+               </div>
             </mat-card-content>
             <mat-card-actions>
-              <button mat-button>=</button>
-              <button mat-button>=</button>
+              <button mat-button color="accent">Manage</button>
             </mat-card-actions>
           </mat-card>
     </div>
@@ -22,13 +21,48 @@
         <mat-card class="example-card">
             <mat-card-title></mat-card-title>
             <mat-card-subtitle></mat-card-subtitle>
-            <mat-card-content *ngFor="let user of project.users">
-              <p>{{user.name}}</p>
+            <mat-card-content>
+              <table mat-table [dataSource]="currentProject?.users" class="w-[100%]">
+
+                <ng-container matColumnDef="name">
+                  <th mat-header-cell *matHeaderCellDef> Name </th>
+                  <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+                </ng-container>
+              
+                <ng-container matColumnDef="role">
+                  <th mat-header-cell *matHeaderCellDef> Rol </th>
+                  <td mat-cell *matCellDef="let element">
+                    <mat-form-field >  
+                      <mat-select [disabled]="viewMode" [(value)]="element.role" >
+                        <mat-option *ngFor="let roles of roles" [value]="roles.value">
+                          {{roles.viewValue}}
+                        </mat-option>
+                      </mat-select>
+                    </mat-form-field>  
+                  </td>
+                </ng-container>
+
+                <ng-container matColumnDef="remove">
+                  <th mat-header-cell *matHeaderCellDef> </th>
+                  <td mat-cell *matCellDef="let element">
+                      <button mat-button color="warn" (click)="removeMember()" ><mat-icon>person_remove</mat-icon></button>
+                  </td>
+                </ng-container>
+
+                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+              </table>
             </mat-card-content>
+
+            
+
             <mat-card-actions>
-              <button mat-button>=</button>
-              <button mat-button>=</button>
-            </mat-card-actions>
+              <button mat-button color="accent" (click)="editMode()">Manage</button>
+              <div *ngIf="!viewMode" class="inline">
+                <button  class="float-right"  mat-button color="accent" (click)="saveChanges()">Save changes</button>
+                <button  class="float-right" mat-button color="accent" (click)="addMemeber()">Add new people</button> 
+              </div>
+            </mat-card-actions >
           </mat-card>
     </div>
 
