--- a/src/app/components/project-managment/project-detail/project-detail.component.html
+++ b/src/app/components/project-managment/project-detail/project-detail.component.html
@@ -12,7 +12,7 @@
                </div>
             </mat-card-content>
             <mat-card-actions>
-              <button mat-button color="accent">Manage</button>
+              <button mat-button color="accent" (click)="goToProjectView()">Manage tickets</button>
             </mat-card-actions>
           </mat-card>
     </div>
@@ -32,7 +32,7 @@
                 <ng-container matColumnDef="role">
                   <th mat-header-cell *matHeaderCellDef> Rol </th>
                   <td mat-cell *matCellDef="let element">
-                    <mat-form-field >  
+                    <mat-form-field  >  
                       <mat-select [disabled]="viewMode" [(value)]="element.role" >
                         <mat-option *ngFor="let roles of roles" [value]="roles.value">
                           {{roles.viewValue}}
@@ -57,7 +57,7 @@
             
 
             <mat-card-actions>
-              <button mat-button color="accent" (click)="editMode()">Manage</button>
+              <button mat-button color="accent" (click)="editMode()">Manage users</button>
               <div *ngIf="!viewMode" class="inline">
                 <button  class="float-right"  mat-button color="accent" (click)="saveChanges()">Save changes</button>
                 <button  class="float-right" mat-button color="accent" (click)="addMemeber()">Add new people</button> 
