--- a/src/app/components/ticket-list/ticket-list.component.html
+++ b/src/app/components/ticket-list/ticket-list.component.html
@@ -112,8 +112,8 @@
     <td mat-cell *matCellDef="let element">{{ element.project }}</td>
   </ng-container>
 
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+  <tr mat-header-row  *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row class="hover:bg-gray-100 cursor-pointer" (click)="goDetailTicket(row)" *matRowDef="let row; columns: displayedColumns"></tr>
 
   <tr *matNoDataRow>
     <td class="p-2" colspan="4">No result matches this query</td>
