--- a/src/app/components/ticket-list/ticket-list.component.html
+++ b/src/app/components/ticket-list/ticket-list.component.html
@@ -90,7 +90,11 @@
 
   <ng-container matColumnDef="status">
     <th mat-header-cell mat-sort-header *matHeaderCellDef>Status</th>
-    <td mat-cell *matCellDef="let element">{{ status[element.status] }}</td>
+    <td mat-cell *matCellDef="let element " [ngClass]="{
+      'text-blue-400': element.status === 0,
+      'text-yellow-400': element.status === 1,
+      'text-green-500': element.status === 2
+    }" >{{ status[element.status] }}    </td>
   </ng-container>
 
   <ng-container matColumnDef="lastUpdateChange">
