ticket-list table multiple filtering set-up

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
   <mat-sidenav class="sideBar" mode="side" opened>
     <nav>
       <a class="items-center" mat-button style="display: flex;" *ngFor="let link of links" 
-      [routerLink]="link.url" routerLinkActive="text-red-600"> 
+      [routerLink]="link.url" routerLinkActive="text-[#ff4182]"> 
       <mat-icon>{{link.icon}}</mat-icon>
         {{link.name}}
       </a>
