--- a/src/app/components/ticket-list/ticket-list.component.html
+++ b/src/app/components/ticket-list/ticket-list.component.html
@@ -1,19 +1,76 @@
-<div class="m-4 border">
+<form class="m-4 border" [formGroup]="formControl">
   <div class="bg-[#ff4081] px-2 py-1 text-white">
     <p style="margin: 0px" class="text-xl">Filters</p>
   </div>
   <div class="flex flex-col">
     <div class="p-2 bg-slate-100 grid grid-cols-4 gap-4">
-      <mat-form-field
-        appearance="outline"
-        *ngFor="let filter of dropDownfilterStructure"
-      >
-        <mat-label>{{ filter.label }}</mat-label>
-        <mat-select>
-          <mat-option
-            *ngFor="let sample of filter.content"
-            [value]="sample.value"
-          >
+      <mat-form-field appearance="outline">
+        <mat-label>Title</mat-label>
+        <mat-select >
+          <mat-option *ngFor="let sample of samples" [value]="sample.value">
+            {{ sample.viewValue }}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+
+      <mat-form-field appearance="outline">
+        <mat-label>Reported by</mat-label>
+        <mat-select >
+          <mat-option *ngFor="let sample of samples" [value]="sample.value">
+            {{ sample.viewValue }}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+
+      <mat-form-field appearance="outline">
+        <mat-label>Assigned to</mat-label>
+        <mat-select >
+          <mat-option *ngFor="let sample of samples" [value]="sample.value">
+            {{ sample.viewValue }}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+
+      <mat-form-field appearance="outline">
+        <mat-label>Status</mat-label>
+        <mat-select formControlName="status">
+          <mat-option *ngFor="let sample of samples" [value]="sample.value">
+            {{ sample.viewValue }}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+
+      <mat-form-field appearance="outline">
+        <mat-label>Priority</mat-label>
+        <mat-select formControlName="priority">
+          <mat-option *ngFor="let sample of samples" [value]="sample.value">
+            {{ sample.viewValue }}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+
+      <mat-form-field appearance="outline">
+        <mat-label>Category</mat-label>
+        <mat-select >
+          <mat-option *ngFor="let sample of samples" [value]="sample.value">
+            {{ sample.viewValue }}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+
+      <mat-form-field appearance="outline">
+        <mat-label>Project</mat-label>
+        <mat-select formControlName="project">
+          <mat-option *ngFor="let sample of samples" [value]="sample.value">
+            {{ sample.viewValue }}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+
+      <mat-form-field appearance="outline">
+        <mat-label>Severity</mat-label>
+        <mat-select formControlName="severity">
+          <mat-option *ngFor="let sample of samples" [value]="sample.value">
             {{ sample.viewValue }}
           </mat-option>
         </mat-select>
@@ -49,10 +106,10 @@
   <div class="px-2 pt-1 bg-slate-200">
     <mat-form-field color="accent" class="mx-2"
       ><mat-label>Search</mat-label
-      ><input (keyup)="applyFilter($event)" matInput
+      ><input formControlName="title" matInput
     /></mat-form-field>
   </div>
-</div>
+</form>
 
 <table mat-table matSort [dataSource]="dataSource" class="w-[100%]">
   <ng-container matColumnDef="priority">
@@ -90,11 +147,17 @@
 
   <ng-container matColumnDef="status">
     <th mat-header-cell mat-sort-header *matHeaderCellDef>Status</th>
-    <td mat-cell *matCellDef="let element " [ngClass]="{
-      'text-blue-400': element.status === 0,
-      'text-yellow-400': element.status === 1,
-      'text-green-500': element.status === 2
-    }" >{{ status[element.status] }}    </td>
+    <td
+      mat-cell
+      *matCellDef="let element"
+      [ngClass]="{
+        'text-blue-400': element.status === 0,
+        'text-yellow-400': element.status === 1,
+        'text-green-500': element.status === 2
+      }"
+    >
+      {{ status[element.status] }}
+    </td>
   </ng-container>
 
   <ng-container matColumnDef="lastUpdateChange">
@@ -116,8 +179,13 @@
     <td mat-cell *matCellDef="let element">{{ element.project }}</td>
   </ng-container>
 
-  <tr mat-header-row  *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row class="hover:bg-gray-100 cursor-pointer" (click)="goDetailTicket(row)" *matRowDef="let row; columns: displayedColumns"></tr>
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr
+    mat-row
+    class="hover:bg-gray-100 cursor-pointer"
+    (click)="goDetailTicket(row)"
+    *matRowDef="let row; columns: displayedColumns"
+  ></tr>
 
   <tr *matNoDataRow>
     <td class="p-2" colspan="4">No result matches this query</td>
