--- a/src/app/components/project-managment/project-managment.component.html
+++ b/src/app/components/project-managment/project-managment.component.html
@@ -1,4 +1,9 @@
 <div class="flex flex-row p-8 gap-8">
-    <app-project-card [projects$]="projects$" class="basis-[33%]" (openProject)="openProject($event)" ></app-project-card>
+    <app-project-card [projects]="projects$ | async" class="basis-[33%]" (openProject)="openProject($event)" ></app-project-card>
     <app-project-detail class="basis-[66%] " [selectedProject]="selectedProject"></app-project-detail>
+</div>
+<div>
+    <button (click)="openDialog()" class="right-[30px] bottom-[30px]" style="position: fixed;" mat-fab color="accent">
+        <mat-icon>add</mat-icon>
+    </button>
 </div>
