--- a/src/app/components/project-managment/project-card/project-card.component.html
+++ b/src/app/components/project-managment/project-card/project-card.component.html
@@ -1,19 +1,19 @@
 <div class=" flex flex-col gap-6">
-    <mat-card class="hover:cursor-pointer" *ngFor="let project of projects$ | async" (click)="openProject.emit(project)">
+    <mat-card class="hover:cursor-pointer" *ngFor="let project of projects" (click)="openProject.emit(project)">
       <mat-card-title>{{project.title}} </mat-card-title>
       <mat-card-subtitle>{{project.subtitle}}</mat-card-subtitle>
-     
+
       <mat-card-content>
         <p>{{project.description}}</p>
         <mat-progress-bar
         color="accent"
-        [value]="project.getCompletionProgress()">
+        [value]="getCompletionProgress(project?.tickets)">
     </mat-progress-bar>
       </mat-card-content>
+      
       <mat-card-actions>
-          <button color="accent" mat-button>MANAGE</button>
+          <button color="accent" mat-button>EDIT</button>
             {{getParticipants(project.users)}}
-        
       </mat-card-actions>
     </mat-card>
   </div>
