--- a/src/app/components/project-managment/project-detail/project-detail.component.html
+++ b/src/app/components/project-managment/project-detail/project-detail.component.html
@@ -12,7 +12,7 @@
                </div>
             </mat-card-content>
             <mat-card-actions>
-              <div class="flex justify-end"> 
+              <div> 
               <button mat-button color="accent" (click)="goToProjectView()">Manage tickets</button>
               </div>
             </mat-card-actions>
@@ -59,7 +59,7 @@
             
 
             <mat-card-actions>
-              <div class="flex justify-end"> 
+              <div > 
                 <button  mat-button color="accent" (click)="addMemeber()">Invite new people</button> 
               </div>
             </mat-card-actions >
