--- a/src/app/components/ticket-detail/ticket-detail.component.html
+++ b/src/app/components/ticket-detail/ticket-detail.component.html
@@ -11,7 +11,7 @@
 
         <div class="text-xl"> 
             <p class="flex items-center"> {{ticket.category}} {{ticket.id}}  </p>
-            <p > {{ticket.title}}</p>
+            <p > {{ticket.name}}</p>
         </div>
 
         <div class="flex flex-col items-center gap-1">
