--- a/src/app/components/ticket-list/ticket-list.component.html
+++ b/src/app/components/ticket-list/ticket-list.component.html
@@ -5,7 +5,7 @@
   <div class="flex flex-col">
     <div class="p-2 bg-slate-100 grid grid-cols-4 gap-4">
       <mat-form-field appearance="outline">
-        <mat-label>Title</mat-label>
+        <mat-label>Name</mat-label>
         <mat-select >
           <mat-option *ngFor="let sample of samples" [value]="sample.value">
             {{ sample.viewValue }}
@@ -43,8 +43,7 @@
       <mat-form-field appearance="outline">
         <mat-label>Priority</mat-label>
         <mat-select formControlName="priority">
-          <mat-option *ngFor="let sample of samples" [value]="sample.value">
-            {{ sample.viewValue }}
+          <mat-option *ngFor="let sample of samples">
           </mat-option>
         </mat-select>
       </mat-form-field>
@@ -103,10 +102,11 @@
     </div>
   </div>
 
+  <!-- Table -->
   <div class="px-2 pt-1 bg-slate-200">
     <mat-form-field color="accent" class="mx-2"
       ><mat-label>Search</mat-label
-      ><input formControlName="title" matInput
+      ><input formControlName="name" matInput
     /></mat-form-field>
   </div>
 </form>
@@ -165,11 +165,11 @@
     <td mat-cell *matCellDef="let element">{{ element.lastUpdateChange }}</td>
   </ng-container>
 
-  <ng-container matColumnDef="title">
+  <ng-container matColumnDef="name">
     <th mat-header-cell mat-sort-header *matHeaderCellDef mat-sort-header>
-      Title
+      Name
     </th>
-    <td mat-cell *matCellDef="let element">{{ element.title }}</td>
+    <td mat-cell *matCellDef="let element">{{ element.name }}</td>
   </ng-container>
 
   <ng-container matColumnDef="project">
@@ -196,3 +196,7 @@
   [pageSizeOptions]="[50]"
   aria-label="Select page of users"
 ></mat-paginator>
+
+<button (click)="openDialog()" class="right-[30px] bottom-[30px]" style="position: fixed;" mat-fab color="accent">
+  <mat-icon>add</mat-icon>
+</button>
