login form markup and validators

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,9 @@
 
 <mat-toolbar color="primary">
-  <span>MKBugs</span>
+  <div class="flex w-[100%] justify-between">
+    <span>MKBugs</span>
+    <button mat-icon-button routerLink="/login" > <mat-icon>account_circle</mat-icon> </button>
+  </div>
 </mat-toolbar>
 
 <mat-sidenav-container class="mainContainer">
