--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,11 +1,37 @@
-<div>
-    <label for=""  >Email</label>
-    <input type="text" [(ngModel)]="email">
-    <label for="" >Password</label>
-    <input [(ngModel)]="password"  type="text">
-    <button (click)="submit()">Submit</button>
+<div class="flex justify-center items-center h-[60%]">
+    <div class=" shadow-lg rounded bg-white p-4 min-w-[40%]">
+        <form class="login-form flex flex-col">
+            <p class="text-xl">Login</p>
+            <mat-form-field class="example-full-width" appearance="outline">
+                <mat-label>Email</mat-label>
+                <input type="email" matInput [formControl]="emailFormControl" [errorStateMatcher]="matcher">
+                <mat-error *ngIf="emailFormControl.hasError('email') && !emailFormControl.hasError('required')">
+                    Please enter a valid email address
+                </mat-error>
+                <mat-error *ngIf="emailFormControl.hasError('required')">
+                    Email is <strong>required</strong>
+                </mat-error>
+            </mat-form-field>
+            
+            <mat-form-field class="example-full-width" appearance="outline">
+                <mat-label>Password</mat-label>
+                <input matInput [formControl]="passwordFormControl" [errorStateMatcher]="matcher" type="password">
+                <mat-error *ngIf="passwordFormControl.hasError('minlength') && !passwordFormControl.hasError('required')">
+                    The password must be atleast 6 characters
+                </mat-error>
+                <mat-error *ngIf="passwordFormControl.hasError('required')">
+                    Password is <strong>required</strong>
+                </mat-error>
+            </mat-form-field>
+            
+        <button mat-raised-button color="accent" (click)="submit()" [disabled]="!(passwordFormControl.valid && emailFormControl.valid)" >Login</button>
+        <div class="flex mt-3 justify-around" >
+            <a  class="cursor-pointer text-blue-400 ">Sign up</a>
+            <a  class="cursor-pointer text-blue-400 ">Forgot password</a>
+        </div>
+    </form>
 </div>
-
+</div>
 <div *ngIf="authService.currentUser$ | async as user">
     {{user.email }}
 </div>
