users can own projects

--- a/src/app/components/project-managment/project-managment.component.html
+++ b/src/app/components/project-managment/project-managment.component.html
@@ -1,5 +1,5 @@
-<div class="flex flex-row p-8 gap-8">
-    <app-project-card [projects]="projects$ | async" class="basis-[33%]" (openProject)="openProject($event)" ></app-project-card>
+<div class="flex flex-row p-8 gap-8" *ngIf="(projects$ | async)?.length">
+    <app-project-card [projects]="projects$ | async" class="basis-[33%]" (openProject)="selectProject($event)" ></app-project-card>
     <app-project-detail class="basis-[66%] " [selectedProject]="selectedProject"></app-project-detail>
 </div>
 
