--- a/src/app/components/project-managment/project-detail/project-detail.component.html
+++ b/src/app/components/project-managment/project-detail/project-detail.component.html
@@ -1,15 +1,15 @@
-<div class="flex flex-col gap-8 sticky top-8">
+<div class="flex flex-col gap-8 sticky top-8" *ngIf="currentProject; else hint">
 
-    <div class="">
+    
         <mat-card class="example-card">
             <mat-card-title></mat-card-title>
             <mat-card-subtitle></mat-card-subtitle>
             <mat-card-content>
-              <h2>{{currentProject?.title}}</h2>
-              <p>{{currentProject?.subtitle}}</p>
-               <div class="border rounded-md p-4">
-                Latest Project activity, tickets created, closed, comments...
-               </div>
+              <h2>{{currentProject.title}}</h2>
+              <p>{{currentProject.description}}</p>
+              <div class="border rounded-md p-4">
+                Latest Project activity, tickets created, closed, comments.../Project stats
+              </div>
             </mat-card-content>
             <mat-card-actions>
               <div> 
@@ -17,14 +17,14 @@
               </div>
             </mat-card-actions>
           </mat-card>
-    </div>
+    
 
-    <div class="">
+    
         <mat-card class="example-card">
             <mat-card-title></mat-card-title>
             <mat-card-subtitle></mat-card-subtitle>
             <mat-card-content>
-              <table mat-table [dataSource]="currentProject?.users" class="w-[100%]">
+              <table mat-table [dataSource]="currentProject.users" class="w-[100%]">
 
                 <ng-container matColumnDef="name">
                   <th mat-header-cell *matHeaderCellDef> Name </th>
@@ -64,6 +64,12 @@
               </div>
             </mat-card-actions >
           </mat-card>
-    </div>
+  
 
 </div>
+
+<ng-template #hint>
+  <p class="text-2xl mt-3 text-center">
+    Select a project to see more info
+  </p>
+</ng-template>
