--- a/src/app/components/project-managment/project-detail/project-detail.component.html
+++ b/src/app/components/project-managment/project-detail/project-detail.component.html
@@ -27,8 +27,8 @@
               <table mat-table [dataSource]="currentProject.users" class="w-[100%]">
 
                 <ng-container matColumnDef="name">
-                  <th mat-header-cell *matHeaderCellDef> Name </th>
-                  <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+                  <th mat-header-cell *matHeaderCellDef> Email </th>
+                  <td mat-cell *matCellDef="let element"> {{element.email}} </td>
                 </ng-container>
               
                 <ng-container matColumnDef="role">
@@ -60,7 +60,8 @@
 
             <mat-card-actions>
               <div > 
-                <button  mat-button color="accent" (click)="addMemeber()">Invite new people</button> 
+                <button  mat-button color="accent" (click)="editMode()">Edit</button> 
+                <button  mat-button color="accent" (click)="addMemeber(memberDialog)">Invite new people</button> 
               </div>
             </mat-card-actions >
           </mat-card>
@@ -72,4 +73,24 @@
   <p class="text-2xl mt-3 text-center">
     Select a project to see more info
   </p>
+</ng-template>
+
+<ng-template #memberDialog>
+  <h2 matDialogTitle>Send an invitation to join your project</h2>
+  <p matDialogContent>
+    <mat-form-field style="width: 100%;" appearance="outline">
+      <mat-label>Email</mat-label>
+      <input type="email" matInput [formControl]="emailFormControl" [errorStateMatcher]="matcher">
+      <mat-error *ngIf="emailFormControl.hasError('email') && !emailFormControl.hasError('required')">
+          Please enter a valid email address
+      </mat-error>
+      <mat-error *ngIf="emailFormControl.hasError('required')">
+          Email is <strong>required</strong>
+      </mat-error>
+    </mat-form-field>
+  </p>
+  <mat-dialog-actions align="end">
+    <button mat-button matDialogClose>Close</button>
+    <button mat-raised-button color="accent" [disabled]="!emailFormControl.valid" (click)="sendEmail.emit({email:emailFormControl.value, project:currentProject?.id})" matDialogClose>Send</button>
+  </mat-dialog-actions>
 </ng-template>
