--- a/src/app/components/ticket-detail/ticket-detail.component.html
+++ b/src/app/components/ticket-detail/ticket-detail.component.html
@@ -15,10 +15,20 @@
         </div>
 
         <div class="flex flex-col items-center gap-1">
-        <img src="{{svg}}" alt="profilePIC" height="50" width="50" class="rounded-full border bg-[#fafafa7d]">
+
+        <ng-container *ngIf="ticket.assigned != 'unassigned'; else unassigned">
+            <img src="{{svg}}" alt="profilePIC" height="50" width="50" class="rounded-full border bg-[#fafafa7d]">
             <p>{{  ticket.assigned.substr(0,  ticket.assigned.indexOf('@')) }}</p>
+        </ng-container>
+
+        <ng-template #unassigned>
+            <mat-icon class="text-5xl flex-1 items-center" style="width: auto;" [inline]="false">face</mat-icon>
+            <p>Unassigned</p>
+        </ng-template>
+
         </div>
 
+    
         </div>
 
         
