--- a/src/app/components/ticket-list/ticket-list.component.html
+++ b/src/app/components/ticket-list/ticket-list.component.html
@@ -111,9 +111,9 @@
     </td>
   </ng-container>
 
-  <ng-container matColumnDef="id">
+  <ng-container matColumnDef="tId">
     <th mat-header-cell mat-sort-header *matHeaderCellDef>Id</th>
-    <td mat-cell *matCellDef="let element">{{ element.id }}</td>
+    <td mat-cell *matCellDef="let element">{{ element.tId }}</td>
   </ng-container>
 
   <ng-container matColumnDef="severity">
