--- a/src/styles.scss
+++ b/src/styles.scss
@@ -45,3 +45,7 @@ app-project-detail .mat-form-field-appearance-legacy.mat-form-field-disabled .ma
 app-ticket-list .mat-paginator-page-size{
     display: none;
 }
+
+app-ticket-detail .mat-select-disabled .mat-select-value{
+    color: black;
+}
