--- a/src/app/components/ticket-detail/ticket-detail.component.html
+++ b/src/app/components/ticket-detail/ticket-detail.component.html
@@ -3,7 +3,7 @@
 
 <div  class="flex m-6 gap-4">
 
-    <div *ngIf="ticket$ | async as ticket;" class="flex-1 border rounded flex-grow-[2]  ">
+    <div *ngIf="ticket$ | async as ticket; else skeletonLoading" class="flex-1 border rounded flex-grow-[2]  ">
         <div class="bg-[#ff4081] px-2 py-1 text-white text-lg">
         {{project.title}} {{category[ticket.category].viewValue}} details
         </div>
@@ -98,6 +98,34 @@
             <button mat-raised-button color="accent" (click)="editMode = !editMode" > Edit <mat-icon>edit</mat-icon></button>
         </div>
     </div>
+
+    <ng-template #skeletonLoading>
+        <div class="flex-1 border rounded flex-grow-[2] h-[100%] ">
+            <div class="bg-[#ff4081] px-2 py-4 text-white text-lg">
+            </div>
+            <div class=" p-2  flex justify-between">
+            <div class="text-xl w-[100%]"> 
+                <div class="loading p-4 w-[20%] "></div>
+                <div class="loading p-4 mt-3 w-[80%] "></div>
+            </div>
+            <div class="flex flex-col items-center gap-1">
+                <div class="loading h-[50px] w-[50px] rounded-full "></div>
+            </div>
+            </div>
+            <div class="p-2 flex gap-4 h-[100%]">
+                <div class="flex-1 flex-grow-[2]  ">
+                    <div class="loading p-4 h-[250px]  w-[100%] "></div>
+                </div>
+                <div class="flex-1 overflow-hidden">
+                    <div class="loading p-4 w-[20%] "></div>
+                    <div class="loading mt-4 p-4 h-[100%] w-[100%] "></div>
+                </div>
+            </div>
+            <div class="flex justify-end gap-4 m-3" >
+            </div>
+        </div>
+    </ng-template>
+
 
     <div class="flex-1 border rounded ">
         <div class="bg-[#ff4081] px-2 py-1 text-white text-lg">
