--- a/src/app/components/ticket-detail/ticket-detail.component.html
+++ b/src/app/components/ticket-detail/ticket-detail.component.html
@@ -95,7 +95,7 @@
         </div>
         <div class="flex justify-end gap-4 m-3" >
             <button mat-raised-button *ngIf="editMode" [disabled]="ticket.name.length == 0" (click)="saveTicketChanges(ticket)"> Save changes <mat-icon>save</mat-icon></button>
-            <button mat-raised-button color="accent" (click)="editMode = !editMode" > Edit <mat-icon>edit</mat-icon></button>
+            <button mat-raised-button color="accent" (click)="editMode = !editMode" > Edit <mat-icon>{{editMode? "cancel" : "edit"}}</mat-icon></button>
         </div>
     </div>
 
@@ -106,7 +106,7 @@
             <div class=" p-2  flex justify-between">
             <div class="text-xl w-[100%]"> 
                 <div class="loading p-4 w-[20%] "></div>
-                <div class="loading p-4 mt-3 w-[80%] "></div>
+                <div class="loading p-4 mt-3 w-[40%] "></div>
             </div>
             <div class="flex flex-col items-center gap-1">
                 <div class="loading h-[50px] w-[50px] rounded-full "></div>
@@ -117,7 +117,7 @@
                     <div class="loading p-4 h-[250px]  w-[100%] "></div>
                 </div>
                 <div class="flex-1 overflow-hidden">
-                    <div class="loading p-4 w-[20%] "></div>
+                    <div class="loading p-4 w-[30%] "></div>
                     <div class="loading mt-4 p-4 h-[100%] w-[100%] "></div>
                 </div>
             </div>
