--- a/src/app/components/ticket-list/ticket-list.component.html
+++ b/src/app/components/ticket-list/ticket-list.component.html
@@ -4,29 +4,21 @@
   </div>
   <div class="flex flex-col">
     <div class="p-2 bg-slate-100 grid grid-cols-4 gap-4">
-      <mat-form-field appearance="outline">
-        <mat-label>Name</mat-label>
-        <mat-select >
-          <mat-option *ngFor="let sample of samples" [value]="sample.value">
-            {{ sample.viewValue }}
-          </mat-option>
-        </mat-select>
-      </mat-form-field>
 
       <mat-form-field appearance="outline">
         <mat-label>Reported by</mat-label>
-        <mat-select >
-          <mat-option *ngFor="let sample of samples" [value]="sample.value">
-            {{ sample.viewValue }}
+        <mat-select formControlName="reporter" >
+          <mat-option *ngFor="let user of users" [value]="user">
+            {{ user.email }}
           </mat-option>
         </mat-select>
       </mat-form-field>
 
       <mat-form-field appearance="outline">
         <mat-label>Assigned to</mat-label>
-        <mat-select >
-          <mat-option *ngFor="let sample of samples" [value]="sample.value">
-            {{ sample.viewValue }}
+        <mat-select formControlName="assigned" >
+          <mat-option *ngFor="let user of users" [value]="user">
+            {{ user.email }}
           </mat-option>
         </mat-select>
       </mat-form-field>
@@ -34,8 +26,8 @@
       <mat-form-field appearance="outline">
         <mat-label>Status</mat-label>
         <mat-select formControlName="status">
-          <mat-option *ngFor="let sample of samples" [value]="sample.value">
-            {{ sample.viewValue }}
+          <mat-option *ngFor="let status of statuses" [value]="status.value">
+            {{ status.viewValue }}
           </mat-option>
         </mat-select>
       </mat-form-field>
@@ -43,16 +35,17 @@
       <mat-form-field appearance="outline">
         <mat-label>Priority</mat-label>
         <mat-select formControlName="priority">
-          <mat-option *ngFor="let sample of samples">
+          <mat-option *ngFor="let priority of priorities" [value]="priority.value">
+            {{priority.viewValue}}
           </mat-option>
         </mat-select>
       </mat-form-field>
 
       <mat-form-field appearance="outline">
-        <mat-label>Category</mat-label>
-        <mat-select >
-          <mat-option *ngFor="let sample of samples" [value]="sample.value">
-            {{ sample.viewValue }}
+        <mat-label >Category</mat-label>
+        <mat-select formControlName="category" >
+          <mat-option *ngFor="let category of categories" [value]="category.value">
+            {{ category.viewValue }}
           </mat-option>
         </mat-select>
       </mat-form-field>
@@ -61,8 +54,8 @@
       <mat-form-field appearance="outline">
         <mat-label>Severity</mat-label>
         <mat-select formControlName="severity">
-          <mat-option *ngFor="let sample of samples" [value]="sample.value">
-            {{ sample.viewValue }}
+          <mat-option *ngFor="let severity of severities" [value]="severity.value">
+            {{ severity.viewValue }}
           </mat-option>
         </mat-select>
       </mat-form-field>
@@ -100,6 +93,7 @@
       ><mat-label>Search</mat-label
       ><input formControlName="name" matInput
     /></mat-form-field>
+    <button mat-button (click)="formControl.reset()" >Clear filters</button>
   </div>
 </form>
 
@@ -107,7 +101,7 @@
   <ng-container matColumnDef="priority">
     <th mat-header-cell mat-sort-header *matHeaderCellDef>Priority</th>
     <td mat-cell *matCellDef="let element">
-      {{ priority[element.priority] }}
+      {{ priorities[element.priority].viewValue}}
     </td>
   </ng-container>
 
@@ -127,14 +121,14 @@
           'text-red-700': element.severity === 3
         }"
       >
-        {{ severity[element.severity] }}
+        {{ severities[element.severity].icon }}
       </mat-icon>
     </td>
   </ng-container>
 
   <ng-container matColumnDef="category">
     <th mat-header-cell mat-sort-header *matHeaderCellDef>Category</th>
-    <td mat-cell *matCellDef="let element">{{ categories[element.category] }}</td>
+    <td mat-cell *matCellDef="let element">{{ categories[element.category].viewValue }}</td>
   </ng-container>
 
   <ng-container matColumnDef="status">
@@ -145,10 +139,11 @@
       [ngClass]="{
         'text-blue-400': element.status === 0,
         'text-yellow-400': element.status === 1,
-        'text-green-500': element.status === 2
+        'text-red-500': element.status === 2,
+        'text-green-500': element.status === 3
       }"
     >
-      {{ status[element.status] }}
+      {{ statuses[element.status].viewValue }}
     </td>
   </ng-container>
 
