--- a/src/app/components/ticket-list/ticket-dialog/ticket-dialog.component.html
+++ b/src/app/components/ticket-list/ticket-dialog/ticket-dialog.component.html
@@ -76,6 +76,7 @@
     color="accent"
     (click)="saveTicket()"
     mat-dialog-close
+    [disabled]="!editedTicket.valid"
   >
     Save
   </button>
