--- a/src/app/components/ticket-list/ticket-list.component.html
+++ b/src/app/components/ticket-list/ticket-list.component.html
@@ -8,7 +8,7 @@
       <mat-form-field appearance="outline">
         <mat-label>Reported by</mat-label>
         <mat-select formControlName="reporter" >
-          <mat-option *ngFor="let user of users" [value]="user">
+          <mat-option *ngFor="let user of users" [value]="user.email">
             {{ user.email }}
           </mat-option>
         </mat-select>
@@ -17,7 +17,7 @@
       <mat-form-field appearance="outline">
         <mat-label>Assigned to</mat-label>
         <mat-select formControlName="assigned" >
-          <mat-option *ngFor="let user of users" [value]="user">
+          <mat-option *ngFor="let user of users" [value]="user.email">
             {{ user.email }}
           </mat-option>
         </mat-select>
@@ -63,8 +63,8 @@
       <mat-form-field appearance="outline">
         <mat-label>Created</mat-label>
         <mat-date-range-input [rangePicker]="createdPicker">
-          <input matStartDate placeholder="Start date" />
-          <input matEndDate placeholder="End date" />
+          <input formControlName="startDate"  matStartDate placeholder="Start date" />
+          <input formControlName="endDate"  matEndDate placeholder="End date" />
         </mat-date-range-input>
         <mat-hint>MM/DD/YYYY – MM/DD/YYYY</mat-hint>
         <mat-datepicker-toggle
@@ -72,17 +72,6 @@
           [for]="createdPicker"
         ></mat-datepicker-toggle>
         <mat-date-range-picker #createdPicker></mat-date-range-picker>
-      </mat-form-field>
-
-      <mat-form-field appearance="outline">
-        <mat-label>Last updated</mat-label>
-        <mat-date-range-input [rangePicker]="picker">
-          <input matStartDate placeholder="Start date" />
-          <input matEndDate placeholder="End date" />
-        </mat-date-range-input>
-        <mat-hint>MM/DD/YYYY – MM/DD/YYYY</mat-hint>
-        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-        <mat-date-range-picker #picker></mat-date-range-picker>
       </mat-form-field>
     </div>
   </div>
@@ -137,10 +126,11 @@
       mat-cell
       *matCellDef="let element"
       [ngClass]="{
-        'text-blue-400': element.status === 0,
-        'text-yellow-400': element.status === 1,
-        'text-red-500': element.status === 2,
-        'text-green-500': element.status === 3
+        'text-green-500': element.status === 0,
+        'text-blue-400': element.status === 1,
+        'text-yellow-400': element.status === 2,
+        'text-red-500': element.status === 3,
+        'text-gray-400': element.status === 4
       }"
     >
       {{ statuses[element.status].viewValue }}
@@ -149,7 +139,7 @@
 
   <ng-container matColumnDef="creationDate">
     <th mat-header-cell mat-sort-header *matHeaderCellDef>Created</th>
-    <td mat-cell *matCellDef="let element">{{formatDate(element.creationDate) }}</td>
+    <td mat-cell *matCellDef="let element">{{ element.creationDate? formatDate(element.creationDate) : null }}</td>
   </ng-container>
 
   <ng-container matColumnDef="name">
