--- a/src/app/components/ticket-detail/ticket-detail.component.html
+++ b/src/app/components/ticket-detail/ticket-detail.component.html
@@ -1,9 +1,8 @@
 <div class="flex flex-col">
 
-
 <div  class="flex m-6 gap-4">
 
-    <div *ngIf="ticket$ | async as ticket; else skeletonLoading" class="flex-1 border rounded flex-grow-[2]  ">
+    <div *ngIf="(ticket$ | async)?.ticketObj as ticket; else skeletonLoading" class="flex-1 border rounded flex-grow-[2]  ">
         <div class="bg-[#ff4081] px-2 py-1 text-white text-lg">
         {{project.title}} {{category[ticket.category].viewValue}} details
         </div>
